// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AllNormalizer does not crash on all-zero grids 1`] = `
Array [
  Array [
    0,
    0,
    0,
    0,
  ],
  Array [
    0,
    0,
    0,
    0,
  ],
  Array [
    0,
    0,
    0,
    0,
  ],
]
`;

exports[`AllNormalizer normalizes a complete grid correctly 1`] = `
Array [
  Array [
    1,
    1,
    0.5,
    0.25,
  ],
  Array [
    0.25,
    0.5,
    0.25,
    0,
  ],
  Array [
    1,
    0.75,
    0,
    1,
  ],
]
`;

exports[`AllNormalizer normalizes a grid with negative values correctly 1`] = `
Array [
  Array [
    1,
    1,
    0.25,
    0.625,
  ],
  Array [
    0.375,
    0.75,
    0.625,
    0.5,
  ],
  Array [
    0,
    0.875,
    0.5,
    1,
  ],
]
`;
